--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "JS INTRO",
     "main": "index.js",
     "scripts": {
+      "object": "nodemon ./js/06-object.js",
       "typeof": "nodemon ./js/05-typeof.js",
       "array": "nodemon ./js/04-array.js",
       "boolean": "nodemon ./js/03-boolean.js",
