--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "description": "JS INTRO",
     "main": "index.js",
     "scripts": {
+      "if": "nodemon ./js/08-if.js",
+      "function": "nodemon ./js/07-function.js",
       "object": "nodemon ./js/06-object.js",
       "typeof": "nodemon ./js/05-typeof.js",
       "array": "nodemon ./js/04-array.js",
