--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "description": "JS INTRO",
     "main": "index.js",
     "scripts": {
+      "spread-rest": "nodemon ./js/17-spread-rest.js",
+      "math-methods": "nodemon ./js/16-math-methods.js",
+      "array-methods": "nodemon ./js/15-array-methods.js",
       "string-methods": "nodemon ./js/14-string-methods.js",
       "arrow": "nodemon ./js/13-arrow.js",
       "ternary": "nodemon ./js/12-ternary.js",
